fix video can not load issue